<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/setup_background"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/splash_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_hello"
                android:fontFamily="@font/nanum_light"
                android:textSize="40sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/splash_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/setup_hello_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/nanum_normal"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/splash_title" />

            <TextView
                android:id="@+id/splash_content_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nanum_normal"

                android:text="@string/setup_hello_next"
                android:textColor="@color/orange"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/splash_content" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_next"
                android:text="@string/btn_next"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/splash_content_1"
                app:layout_constraintTop_toTopOf="@+id/splash_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>